--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "club-messenger-bot",
   "version": "1.0.0",
-  "private": true,
+  "description": "Messenger bot for the Industrial Automation Engineering Club",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.8",
-    "body-parser": "^1.20.2"
-  }
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
