--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "club-messenger-bot",
   "version": "1.0.0",
-  "description": "Messenger bot for the Industrial Automation Engineering Club",
+  "description": "Messenger bot for Club of Industrial Automation Engineering",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
+    "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18.x"
-  },
-  "author": "Your Name",
-  "license": "MIT"
+    "axios": "^1.5.0"
+  }
 }
